[package]
description = "Parser for the TLE (Two-line elements)"
license = "MIT/Apache-2.0"
name = "tle-parser"
version = "0.1.0"
authors = ["Kazushi Kawamura <kawamurakazushi@gmail.com>"]
edition = "2018"
homepage = "https://github.com/kawamurakazushi/tle-parser"
repository = "https://github.com/kawamurakazushi/tle-parser.git"
documentation = "https://docs.rs/tle-parser"
keywords = ["tle", "parser"]


[lib]
name = "tle_parser"

[dependencies]
nom = "5.1.0"
